# gapi

./: .gitignore  AUTHORS.txt  CMakeLists.txt  Makefile  README.md  debian-prereq.sh  make_deb.sh  stderr.txt  stdout.txt
include/gapi/: basic_types.hpp  buffer.hpp  constants.hpp  exception.hpp  framebuffer.hpp  functions.hpp  gapi.hpp  known.hpp  math.hpp  object.hpp  shader.hpp  texture.hpp  types.hpp  utility.hpp  vertex_array.hpp
spec_parser/: CMakeLists.txt  Makefile  compile.sh  functions.hpp  gl.xml  known.hpp  main.cpp  move.bat  move.sh  replace.sh  spec_parser
src/: CMakeLists.txt  Makefile  context.cpp  functions.cpp
test/: CMakeLists.txt  Makefile  buffer.cpp  const_str.hpp  framebuffer.cpp  inline_shader.hpp  main.cpp  shader.cpp  shader_buffer.cpp  shader_texture.cpp  test_data.hpp  tests.hpp  texture.cpp
